[package]
name = "web-task"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
include = ["/LICENSE-*", "/src"]
readme = "./README.md"
description = "The simplest way to run async tasks on the web"
repository = "https://github.com/NthTensor/web-task"

[dependencies]
async-task = { version = "4.7.1", default-features = false }
js-sys = { version = "0.3.77", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false }

[features]
default = ["std"]
std = ["wasm-bindgen/std", "js-sys/std", "async-task/std"]
