[package]
name = "web-task"
version = "1.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
include = ["/LICENSE-*", "/src"]
readme = "./README.md"
description = "The simplest way to run async tasks on the web"
repository = "https://github.com/NthTensor/web-task"

[dependencies]
async-task = { version = "4.7.1", default-features = false }
cfg-if = "1.0.4"
js-sys = { version = "0.3.77", default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false }

[dev-dependencies]
futures-channel = "0.3"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4.46"
wasm_thread = "0.3.3"

[features]
default = ["std"]
std = ["wasm-bindgen/std", "js-sys/std", "async-task/std"]
